--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 html{
     /* Set font for page */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    scroll-snap-type: y mandatory;
 }
 body{
     /* Page background colour*/
@@ -12,6 +13,8 @@ body{
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+    scroll-snap-type: y mandatory;
+    -ms-scroll-snap-points-y: snapInterval(0, 100vh);
 }
 
 h1{
@@ -29,7 +32,8 @@ h1{
 
 p{
     color: white;
-    margin-top: 100vh;
+    padding: 49vh;
+    font-size: 2vh;
 }
 .help_text{
     color: white;
@@ -69,6 +73,12 @@ p{
     font-size: 5vh;
     padding: 2px;
     line-height: 5vh;
+}
+
+.section{
+    height: 100vh;
+    width: 100vw;
+    scroll-snap-align: start;
 }
 
 @media only screen and (max-width:300px){
