--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ p{
     color: white;
     padding: 49vh;
     font-size: 2vh;
+    width: 100%;
 }
 .help_text{
     color: white;
@@ -41,6 +42,7 @@ p{
 }
 .help{
     position: fixed;
+    height: 100%;
 }
 
 .help .help_text {
