--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@ html{
     /* Set font for page */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-snap-type: y mandatory;
+    scroll-snap-stop: always;
+    overflow-x: hidden;
 }
 body{
     /* Page background colour*/
@@ -21,13 +23,14 @@ h1{
     color: white;
     position: absolute;
     z-index: 1;
-    top:0;
-    bottom: 0;
     left: 0;
     right: 0;
     align-items: center;
     display: grid;
     font-size: 10vh;
+    margin:45vh 0 45vh 0;
+    /*margin: 0;*/
+
 }
 
 p{
@@ -36,7 +39,7 @@ p{
     font-size: 2vh;
     width: 100%;
 }
-.help_text{
+.help-text{
     color: white;
     position: fixed;
 }
@@ -45,7 +48,7 @@ p{
     height: 100%;
 }
 
-.help .help_text {
+.help .help-text {
     visibility: hidden;
     width: 300px;
     background-color: black;
@@ -61,25 +64,32 @@ p{
     opacity: 0.8;
 }
 
-.help:hover .help_text {
+.help:hover .help-text {
     visibility: visible;
 }
 
-#help-button{
+#lang-button{
+    right: 0;
+    margin-right: 1vw;
+    position: fixed;
+}
+
+
+.circle{
     height: 5vh;
     width: 5vh;
     background-color: #555;
     border-radius: 50%;
     position: fixed;
-    text-align: center;
-    font-size: 5vh;
     padding: 2px;
     line-height: 5vh;
+    text-align: center;
+    font-size: 4vh;
 }
 
 .section{
     height: 100vh;
-    width: 100vw;
+    width: 50vw;
     scroll-snap-align: start;
 }
 
