--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ h1{
 
 p{
     color: white;
-    padding: 49vh;
+    padding: 49vh 0 49vh 0;
     font-size: 2vh;
     width: 100%;
 }
@@ -92,7 +92,7 @@ p{
 
 .section{
     height: 100vh;
-    width: 50vw;
+    width: 100%;
     scroll-snap-align: start;
 }
 
