--- a/main.css
+++ b/main.css
@@ -75,6 +75,7 @@ p{
     top: 0;
     margin-right: 1vw;
     position: fixed;
+    z-index: 2;
 }
 
 
@@ -102,7 +103,7 @@ p{
     color: white;
     bottom: 0;
     right: 0;
-    position: absolute;
+    position: fixed;
     z-index: 2;
     border-color: white;
     border-radius: 20px;
@@ -116,6 +117,11 @@ h2{
 
 #flock-canvas{
     background: linear-gradient(to top, #040308, #AD4A28, #DD723C, #FC7001, #DCB697, #9BA5AE, #3E5879, #020B1A);
+}
+
+canvas{
+    position: absolute;
+    left:0;
 }
 
 @media only screen and (max-width:300px){
