--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ h1{
     left: 0;
     right: 0;
     font-size: 10vh;
-    margin:45vh 0 0 0;
+    margin: 45vh auto 0 auto;
     overflow-wrap: break-word;
 }
 
